<resources>
    <string name="app_name">Handy Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="pay_for_ciggerates">How much do you pay ($) for a pack of cigarettes ?</string>
    <string name="cigarettes_in_pack">How many cigarettes are in a pack ?</string>
    <string name="Years_of_smoking">How many years have you been smoking ?</string>
    <string name="cigarettes_in_day">How many cigarettes do you smoke in a day ?</string>
    <string name="Daily_cost">Daily Cost</string>
    <string name="Weekly_cost">Weekly Cost</string>
    <string name="Monthly_cost">Monthly Cost</string>
    <string name="Yearly_cost">Yearly Cost</string>
    <string name="Cost_value">$0.0</string>
    <string name="Ready_to_quit">READY TO QUIT</string>
    <string name="until_now_cost">Until now you have spent</string>
    <string name="stop_today">If you stop today you will save upto</string>
    <string name="smoke_quit_text">10 TIPS TO QUIT SMOKING</string>
    <string name="smoke_quit_description">Everybody’s experience with quitting smoking is different, so some these tips may or may not work for you. Don’t be afraid to experiment and find your own tricks for making quitting easier.
\n\n<b>1. Take Deep Breaths</b>\n\n
Whenever you feel a craving, take a deep breath in and slowly let it out. Stress is one of the strongest triggers for nicotine cravings, and this simple exercise will help you relax and calm down. The extra oxygen can help with your headaches and the feelings of dizziness and lightheadedness. If you’ve been smoking for a long time, it’s possible that you still have residual nicotine in your lungs. Breathing deeply can help take the edge off a craving by releasing some of that nicotine into your bloodstream.
\n\n<b>2. Drink Plenty of Water</b>\n\n
Water will speed up the nicotine detox. Water can also help ease your cough by making it easier for your lungs to clear out mucus, and it’s a good way to combat your increased appetite without changing your eating habits too much.
\n\n<b>3. Meditate</b>\n\n
Meditation might sound exotic, but it’s a fantastic way to handle some of the psychological aspects of nicotine withdrawal. Meditation is a form of deep breathing and relaxation. Participants often envision certain thoughts or pictures, repeat specific mantras, or simply focus on deep breathing.  Some simple meditation techniques can help you become more aware of your thoughts, actions and feelings, thereby helping you to better understand what’s triggering your cravings. Once you know your triggers, you can learn to avoid them.
\n\n<b>4. Reduce Your Caffeine Intake</b>\n\n
Nicotine suppresses the effects of caffeine, so after you quit, coffee will have a stronger effect on you. Try cutting back your caffeine intake. Coffee is a stimulant; it increases your heart rate and makes dealing with stress more difficult. It might also be responsible for at least some of your insomnia, so cutting back on it can help you sleep better. You’ll have more energy in the long run.
\n\n<b>5. Get a Stress Ball</b>\n\n
When trying to quit, it’s important to find new ways to relax and calm yourself down without nicotine – as well as keep your hands busy. Buying a stress relief ball, silly putty or another simple toy can go a long way towards developing new healthy habits for dealing with stress.
\n\n<b>6. Find Your Go-To Healthy Snack</b>\n\n
When you quit smoking, your appetite increases. Find a healthy snack you enjoy, like baby carrots or celery sticks, and carry it around with you at all times. When a craving strikes, put the carrot or celery in your mouth and slowly nibble on it. It will help occupy your hands and mouth, and the familiar movement will make it easier to relax and gather yourself.
\n\n<b>7. Take Up a New Hobby</b>\n\n
Consider finding yourself a new and interesting hobby such as painting, pottery or creative writing to take your mind off smoking. Use your newly-found interest to occupy your mind and body to help you deal with cravings. Cooking is a good example of a hobby that utilizes your newly-improved senses of smell and taste. Discover how much better everything tastes now that you’re not smoking.
\n\n<b>8. Start Exercising Regularly</b>\n\n
Try taking up healthy exercise like running or cycling. Vigorous exercise can provide a dopamine release that can replace the one you used to get from cigarettes. Staying active will also speed up your body’s self-repair process. Your health will improve faster and you will be able to see your progress over time. Focusing on an intensive exercise program will leave less time for you to think about cigarettes. It will also make you less likely to go back to smoking, since you won’t want to lose what you have already accomplished.
\n\n<b>9. Throw Away Your Smoking Paraphernalia</b>\n\n
Keeping all your old ashtrays and lighters around can mean that you’re not truly committed to the idea of quitting. It may be a hard thing to do, but eliminating those items will make you think of cigarettes less, and might even reduce your cravings.
\n\n<b>10. Clean Your Home</b>\n\n
As soon as you’ve quit smoking, take the time to freshen up your home. Wash your clothes, steam the furniture and clean the carpet. The smell of tobacco smoke, even when stale, can be a trigger for your cravings, so ensuring that you won’t be smelling it all the time increases your chances of success. A more pleasant environment will also make it easier for you to deal with withdrawal.


</string>
    <string name="Bill_text">Bill Amount</string>
    <string name="Tip_percentage">Tip %</string>
    <string name="No_of_people">No of People</string>
    <string name="Everyone_pays">Everyone Pays</string>
    <string name="Tip_Cost_value">$0.0</string>
    <string name="Bill_per_person">Bill per person</string>
    <string name="Tip_per_person">Tip per person</string>
    <string name="Tip_moreInfo_string">Tip Suggestions</string>
    <string name="service">Services</string>
    <string name="typically_tip">Typical Tip</string>
    <string name="typical_tip"></string>
    <string name="tip_moreInfo_description"><b>Should you tip?</b>
\n\nYes, if the service was acceptable. Many jobs in the service industry pay very little. Without tips, these workers would have a hard time raising a family.
\n\n <b>Who should you tip?</b>
\n\nJust about anyone in the service industry. Including, but not limited to, non-fast food restaurant workers, barbers, maids, taxi drivers, bartenders, and webmasters of conversion sites. ;)
    \n\n<b>Typical Amounts of Tips</b></string>
    <string name="Loan_amount">Loan Amount</string>
    <string name="Loan_term">Loan Term</string>
    <string name="Intrest_rate">Intrest Rate</string>
    <string name="Year">Year</string>
    <string name="Month">Month</string>
    <string name="Total_payback">Total Payback</string>
    <string name="Loan_Cost_value">$0.0</string>
    <string name="Total_Intrest">Total Intrest</string>
    <string name="Monthly_payment">Monthly Payment</string>
    <string name="Loan_Ready_to_quit">READY TO QUIT</string>
    <string name="principle">Principle</string>
    <string name="loan_MoreInfo_text">Loan Basics for Consumers</string>
    <string name="loan_moreInfo_description">Consumers generally seek loans out of financial need, or because they want to acquire something: A car, a vacation, an extension to the home. Loans of this type are quite different from mortgages which finance house purchases.
\n\nWhat characterizes most consumer lending is that it is intended to be relatively short-term. It rarely extends for more than ten years. It may take many different forms: Credit card purchases are a form of consumer loan, even if the consumer pays the purchase back at the end of the month. Short-term loans to help cover bill payments, or even the so-called \'paycheck\' loans made just to cover a consumer\'s salary payment are all forms of consumer lending.
\n\nThere are two basic kinds of consumer loans: Secured and Unsecured.
\n\nA secured loan means that the consumer has put up some form of property in exchange for the money. You might go to a bank, and offer a valuable coin collection up as collateral for a secured loan that permits you to buy a small boat that you wanted. You could, of course, sell your coin collection to get the money, but then you wouldn\'t have it anymore. By putting it up as collateral, you get to keep it so long as you pay the installments on the loan. Of course, you pay interest on the loan as well.
\n\nWhen you take out an unsecured loan, you simply sign an agreement to pay the loan back. There is no collateral, no property that belongs to you to guarantee repayment. You can obtain a personal loan that unsecured, but there are others that we obtain relatively easily like credit cards and overdrafts. It is quite difficult to obtain a personal loan on an unsecured basis. One must have an excellent credit rating to qualify, and, often, banks will only consider longstanding clients for such loans.
\n\nFor whatever kind of loan you borrow, you will have to pay interest. Interest is the profit that the bank or lender makes on loan – what it earns for doing business with you.
\n\nWhen you take out a loan, it\'s important to calculate how much interest you will have to pay on it, based on the rate of interest that the lender is charging you. Add up your interest payments to get the cost of the loan (along with any charges that the bank may impose).
\n\nIf you seek a loan for your business, much will depend on the credit rating your business has and the length of time it\'s been up and running. An established business, one that works regularly with a bank, may have no trouble at all getting a loan. A startup, or a small business can, on the other hand, find that getting access to credit is a real struggle. If getting a loan proves difficult, continued shopping for banks or alternative providers is the best route for a business.</string>
    <string name="trip_dist">Trip Distance</string>
    <string name="Fuel_effi">Fuel Efficiency</string>
    <string name="Gas_price">Gas Price</string>
    <string name="Jounrey_cost_string">This Journey will cost you</string>
    <string name="Fuel_Cost_value">$0.0</string>
    <string name="Fuel_Ready_to_quit">More Information</string>
    <string name="fuel_moreInfo_string">How to Improve Gas Mileage</string>
    <string name="smoke_banner">ca-app-pub-7051442132957918/2581631581</string>
</resources>