<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.xhords.handycalculator.handycalculator.MainActivity">


    <android.support.v4.widget.NestedScrollView
        android:id="@+id/loan_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/loan_primary_light"/>

            <TextView
                android:id="@+id/txt_loan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/textview_lable_size"
                android:text="@string/Loan_amount"
                android:paddingLeft="50dp"
                android:layout_marginTop="30dp"
                android:textColor="@color/text_color_white"/>

            <EditText
                android:id="@+id/txt_loan_amount"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="$0.0"
                android:layout_marginLeft="45dp"
                android:layout_below="@+id/txt_loan"
                android:textColor="@color/text_color_white"
                android:backgroundTint="@color/text_color_white"
                android:textColorHint="@color/text_color_white"
                android:inputType="numberDecimal"/>

            <TextView
                android:textSize="@dimen/textview_lable_size"
                android:id="@+id/txt_loan1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Loan_term"
                android:paddingLeft="50dp"
                android:layout_marginTop="105dp"
                android:textColor="@color/text_color_white"/>

            <EditText
                android:id="@+id/loan_term"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:hint="Input here"
                android:layout_marginLeft="45dp"
                android:layout_below="@+id/txt_loan1"
                android:textColor="@color/text_color_white"
                android:backgroundTint="@color/text_color_white"
                android:textColorHint="@color/text_color_white"
                android:inputType="numberDecimal"/>



            <TextView
                android:id="@+id/txt_loan2"
                android:textSize="@dimen/textview_lable_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Intrest_rate"
                android:paddingLeft="50dp"
                android:layout_marginTop="180dp"
                android:textColor="@color/text_color_white"/>

            <EditText
                android:id="@+id/intrest_rate"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="0.0%"
                android:layout_marginLeft="45dp"
                android:layout_below="@+id/txt_loan2"
                android:inputType="numberDecimal"
                android:textColor="@color/text_color_white"
                android:backgroundTint="@color/text_color_white"
                android:textColorHint="@color/text_color_white"/>

            <com.skyfishjy.library.RippleBackground
                xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:id="@+id/content"
                app:rb_color="@color/loan_primary_dark"
                app:rb_radius="8dp"
                app:rb_rippleAmount="4"
                app:rb_duration="3000"
                app:rb_scale="6"
                android:layout_marginTop="225dp"
                android:layout_centerHorizontal="true">

            <ImageButton
                android:id="@+id/loan_img_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/fuel"
                android:background="@drawable/round_btn_loan"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"/>

            </com.skyfishjy.library.RippleBackground>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Total_payback"
                android:paddingLeft="50dp"
                android:layout_marginTop="430dp"
                android:textColor="@color/text_color_black"/>

            <TextView
                android:id="@+id/total_payback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Loan_Cost_value"
                android:paddingLeft="50dp"
                android:layout_marginTop="450dp"
                android:textSize="@dimen/final_calulated_value"
                android:textColor="@color/text_color_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/principle"
                android:paddingLeft="50dp"
                android:layout_marginTop="350dp"
                android:textColor="@color/text_color_black"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Total_Intrest"
                android:paddingLeft="50dp"
                android:textColor="@color/text_color_black"
                android:layout_marginTop="370dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Monthly_payment"
                android:paddingLeft="50dp"
                android:layout_marginTop="390dp"
                android:textColor="@color/text_color_black"/>

            <TextView
                android:id="@+id/principle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Loan_Cost_value"
                android:layout_marginTop="350dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:paddingRight="50dp"
                android:textColor="@color/text_color_black"/>

            <TextView
                android:id="@+id/total_intrest"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Loan_Cost_value"
                android:layout_marginTop="370dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:paddingRight="50dp"
                android:textColor="@color/text_color_black"/>

            <TextView
                android:id="@+id/monthly_payback"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Loan_Cost_value"
                android:layout_marginTop="390dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:paddingRight="50dp"
                android:textColor="@color/text_color_black"/>

            <ImageView
                android:layout_width="280dp"
                android:layout_height="1dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="420dp"
                android:background="@color/loan_primary_dark"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="More Information"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_below="@+id/total_payback"
                android:layout_marginBottom="60dp"
                android:background="@color/loan_primary_dark"
                android:padding="10dp"
                android:textColor="@color/text_color_white"
                android:id="@+id/loan_moreInfo"/>

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinner"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:alpha="0.3"
                android:layout_alignBaseline="@+id/loan_term"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"/>


        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <com.google.android.gms.ads.AdView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/loan_adview"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize = "BANNER"
        ads:adUnitId = "@string/smoke_banner"/>

</RelativeLayout>
